--- a/src/style.css
+++ b/src/style.css
@@ -110,7 +110,7 @@ p > button:hover {
 
 li {
 	overflow: hidden;
-	padding: 20px 0;
+	padding: 20px 0; 
 	border-bottom: 1px solid #eee;
 }
 
@@ -156,4 +156,10 @@ ul li.editMode input[type=text] {
 
 ul li.editMode label {
 	display: none;
+}
+.action{
+	text-decoration: none;
+	color: red;
+	float: right;
+
 }
